WebAVPlayerController should use WeakPtr<> for C++ instance variables <https://webkit.org/b/231919>

Reviewed by Eric Carlson.

* platform/ios/PlaybackSessionInterfaceAVKit.h:
(WebCore::PlaybackSessionInterfaceAVKit):
- Make RefCounted-class also subclass CanMakeWeakPtr<>.

* platform/ios/WebAVPlayerController.h:
- Add comments that `delegate` and `playbackSessionInterface`
  instance variables are held weakly.  The compiler won't allow
  `weak` to be used on non-Objective-C types, though.

* platform/ios/WebAVPlayerController.mm:
- Add WeakPtr<> instance variables for `delegate` and
  `playbackSessionInterface` properties.
(-[WebAVPlayerController delegate]): Add.
(-[WebAVPlayerController setDelegate:]): Add.
(-[WebAVPlayerController playbackSessionInterface]): Add.
(-[WebAVPlayerController setPlaybackSessionInterface:]): Add.
- Implement getter/setter methods for `delegate` and
  `playbackSessionInterface` properties that use WeakPtr<>
  instance variables.


Canonical link: https://commits.webkit.org/243452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284743 268f45cc-cd09-0410-ab3c-d52691b4dbfc