Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.h
@@ -49,7 +49,8 @@ class WebPlaybackSessionChangeObserver;
 
 class WEBCORE_EXPORT PlaybackSessionInterfaceAVKit
     : public PlaybackSessionModelClient
-    , public RefCounted<PlaybackSessionInterfaceAVKit> {
+    , public RefCounted<PlaybackSessionInterfaceAVKit>
+    , public CanMakeWeakPtr<PlaybackSessionInterfaceAVKit> {
 
 public:
     static Ref<PlaybackSessionInterfaceAVKit> create(PlaybackSessionModel& model)
